--- a/requirements.txt
+++ b/requirements.txt
@@ -17,5 +17,4 @@ typing_extensions==4.13.2
 Werkzeug==3.1.3
 WTForms==3.2.1
 Pillow==11.3.0
-Flask-Bootstrap5
-email-validator
+email-validator==2.3.0
